// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TESTING ChatItemTargetText RENDER ANON_PM should match snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "flex": 1,
            "fontFamily": "Inter-Bold",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "paddingBottom": 2,
          }
        }
      >
        name
      </Text>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#828282",
            "fontFamily": "Poppins-Regular",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "marginLeft": 20,
          }
        }
      >
        time
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 0,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "alignSelf": "center",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "marginRight": 4,
          }
        }
      >
        message
      </Text>
    </View>
  </View>
</View>
`;

exports[`TESTING ChatItemTargetText RENDER ANON_PM with isMe should match snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "flex": 1,
            "fontFamily": "Inter-Bold",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "paddingBottom": 2,
          }
        }
      >
        name
      </Text>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#828282",
            "fontFamily": "Poppins-Regular",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "marginLeft": 20,
          }
        }
      >
        time
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 0,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "alignSelf": "center",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "marginRight": 4,
          }
        }
      >
        You: message
      </Text>
    </View>
  </View>
</View>
`;

exports[`TESTING ChatItemTargetText RENDER ANON_PM with unreadcount should match snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "flex": 1,
            "fontFamily": "Inter-Bold",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "paddingBottom": 2,
          }
        }
      >
        name
      </Text>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#828282",
            "fontFamily": "Poppins-Regular",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "marginLeft": 20,
          }
        }
      >
        time
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 0,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "alignSelf": "center",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "marginRight": 4,
          }
        }
      >
        message
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#0391FB",
            "borderRadius": 10,
            "height": 20,
            "justifyContent": "center",
            "textAlign": "center",
            "width": 20,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Regular",
              "fontSize": 9,
              "lineHeight": 14.52,
            }
          }
        >
          1
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`TESTING ChatItemTargetText RENDER MY_ANON_POST with no messages should match snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Array [
          Object {
            "flex": 1,
            "fontFamily": "Inter-Bold",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "paddingBottom": 2,
          },
          Object {
            "alignSelf": "flex-start",
            "fontFamily": "Inter-Regular",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Inter-Bold",
          }
        }
      >
        name's media post 📸 🖼
      </Text>
    </Text>
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#828282",
            "fontFamily": "Poppins-Regular",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "marginLeft": 20,
          }
        }
      >
        time
      </Text>
    </View>
  </View>
</View>
`;

exports[`TESTING ChatItemTargetText RENDER MY_ANON_POST_NOTIFICATION should match snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Array [
          Object {
            "flex": 1,
            "fontFamily": "Inter-Bold",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "paddingBottom": 2,
          },
          Object {
            "alignSelf": "flex-start",
            "fontFamily": "Inter-Regular",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Inter-Bold",
          }
        }
      >
        name's post: 
      </Text>
      message
    </Text>
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#828282",
            "fontFamily": "Poppins-Regular",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "marginLeft": 20,
          }
        }
      >
        time
      </Text>
    </View>
  </View>
</View>
`;

exports[`TESTING ChatItemTargetText RENDER MY_ANON_POST_NOTIFICATION_I_COMMENTED should match snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Array [
          Object {
            "flex": 1,
            "fontFamily": "Inter-Bold",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "paddingBottom": 2,
          },
          Object {
            "alignSelf": "flex-start",
            "fontFamily": "Inter-Regular",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Inter-Bold",
          }
        }
      >
        name's post: 
      </Text>
      message
    </Text>
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#828282",
            "fontFamily": "Poppins-Regular",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "marginLeft": 20,
          }
        }
      >
        time
      </Text>
    </View>
  </View>
</View>
`;

exports[`TESTING ChatItemTargetText RENDER other type post with messages should match snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Array [
          Object {
            "flex": 1,
            "fontFamily": "Inter-Bold",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "paddingBottom": 2,
          },
          Object {
            "alignSelf": "flex-start",
            "fontFamily": "Inter-Regular",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Inter-Bold",
          }
        }
      >
        name's post: 
      </Text>
      message
    </Text>
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#828282",
            "fontFamily": "Poppins-Regular",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "marginLeft": 20,
          }
        }
      >
        time
      </Text>
    </View>
  </View>
</View>
`;

exports[`TESTING ChatItemTargetText RENDER other type post with no messages should match snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Array [
          Object {
            "flex": 1,
            "fontFamily": "Inter-Bold",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "paddingBottom": 2,
          },
          Object {
            "alignSelf": "flex-start",
            "fontFamily": "Inter-Regular",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Inter-Bold",
          }
        }
      >
        name's media post 📸 🖼
      </Text>
    </Text>
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#828282",
            "fontFamily": "Poppins-Regular",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "marginLeft": 20,
          }
        }
      >
        time
      </Text>
    </View>
  </View>
</View>
`;

exports[`TESTING ChatItemTargetText RENDER other type post with unreadcount should match snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Array [
          Object {
            "flex": 1,
            "fontFamily": "Inter-Bold",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "paddingBottom": 2,
          },
          Object {
            "alignSelf": "flex-start",
            "fontFamily": "Inter-Regular",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Inter-Bold",
          }
        }
      >
        name's media post 📸 🖼
      </Text>
    </Text>
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#828282",
            "fontFamily": "Poppins-Regular",
            "fontSize": 12.600000000000001,
            "lineHeight": 22,
            "marginLeft": 20,
          }
        }
      >
        time
      </Text>
      <View
        style={
          Object {
            "alignSelf": "flex-end",
            "position": "absolute",
            "top": 24,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#0391FB",
              "borderRadius": 10,
              "height": 20,
              "justifyContent": "center",
              "textAlign": "center",
              "width": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Inter-Regular",
                "fontSize": 9,
                "lineHeight": 14.52,
              }
            }
          >
            1
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
